--- a/financeTracker/package.json
+++ b/financeTracker/package.json
@@ -7,6 +7,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"papaparse": "^5.4.1",
 		"preact": "^10.13.1",
 		"preact-iso": "^2.4.0",
 		"preact-render-to-string": "^6.4.1"
